--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -1,30 +1,116 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context="com.sysu.lijun.puzzle.LauncherActivity">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:orientation="vertical">
-        <Button
-            android:id="@+id/btn_quick_start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="快速开始"
-            android:textSize="38sp"
-            />
-        <Button
-            android:id="@+id/btn_quit"
+    <com.sysu.lijun.views.MyScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:focusable="false">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="退出"
-            android:textSize="38sp"/>
+            android:orientation="horizontal"
+            android:focusable="false"
+            >
+
+            <LinearLayout
+                android:id="@+id/first_column"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical" >
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/second_column"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical" >
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/third_column"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical" >
+            </LinearLayout>
+        </LinearLayout>
+
+    </com.sysu.lijun.views.MyScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:background="#90000000">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="PUZZLE"
+                android:gravity="center"
+                android:textSize="70sp"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="30dp"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+            <Button
+                android:id="@+id/btn_quick_start"
+                android:text="快速开始"
+                android:textColor="#FFFFFF"
+                android:textSize="30sp"
+                android:layout_width="200dp"
+                android:layout_height="60dp"
+                android:background="@drawable/quickstart_button"
+                android:layout_marginBottom="5dp"
+                />
+            <Button
+                android:id="@+id/btn_chose_level"
+                android:text="选择难度"
+                android:textColor="#FFFFFF"
+                android:textSize="30sp"
+
+                android:layout_width="200dp"
+                android:layout_height="60dp"
+                android:background="@drawable/chooselevel_button"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"/>
+            <Button
+                android:id="@+id/btn_quit"
+                android:text="退出"
+                android:textColor="#FFFFFF"
+                android:textSize="30sp"
+
+                android:layout_width="200dp"
+                android:layout_height="60dp"
+                android:background="@drawable/exit_button"
+                android:layout_marginTop="5dp"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
-</RelativeLayout>
+
+
+
+</FrameLayout>
